[tool.poetry]
name = "renovate-bypass-throttle"
package-mode = false

[tool.poetry.dependencies]

python = "~3.11"

# Django
Django = "~4.2.3"
django-model-utils = "^3.0.0"
django-extensions = "^3.1.5"
django-jsonfield-backport = "1.0.5"
django-storages = "^1.12.3"

# Postgres
dj-database-url = "~0.5"
psycopg2-binary = "^2.9.3"

# Redis
redis = "^6.0.0"
django-redis = "^5.2"

# Utilities
boto3 = "=1.26.152"
python-json-logger = "^2.0"
pyyaml = "^6.0.1"
requests = "*"
termcolor = "*"

# API
djangorestframework = "~3.14"
drf-yasg = "1.21.7"
django-cors-headers = "^3.11.0"

# Google SSO
social-auth-app-django = "~5.4.0"

# Celery
celery = "~5.3"

# Servers
gunicorn = "^21.0.1"
gevent = "^24.2.1"
python-decouple = "^3.1"

# Monitoring
graypy = "0.2.14"
sentry-sdk = { version = "^1.25", extras = ["django"] }
statsd = "3.2.1"
django-statsd-mozilla = "0.4.0"
cryptography = "^44.0.0"
django-filter = "^2.4.0"
python-jwt = "^3.3.0"
hvac = "^0.10.9"
prometheus-client = "^0.10.1"

[tool.poetry.dev-dependencies]

# Formatting
black = "24.3.0"
isort = "5.13.2"

# Linting
pylint = "3.0.4"
pylint_django = "2.5.5"
mypy = "1.9.0"
django-stubs = "4.2.7"

# Testing
pytest = "6.2.5"
pytest-django = "4.5.2"
pytest-random = "0.02"
pytest-cov = "6.1.1"
pytest-xdist = "3.5.0"
pytest-pudb = "0.7.0"
pytest-mock = "3.14.1"
factory-boy = "3.3.3"
freezegun = "1.5.2"

# Documentation
pygments = "2.19.1"
sphinx = "8.2.3"
sphinx_rtd_theme = "3.0.2"

# Servers
honcho = "1.1.0"
pywatchman = "1.4.1"

# Terminals
ipython = "8.10.0"
sqlparse = "0.5.0"

# Debuggers
ipdb = "0.12.3"
django-debug-toolbar = "4.4.6"

[tool.black]

quiet = true

[tool.isort]

profile = "black"
